--- a/app/src/main/res/xml/settings_main.xml
+++ b/app/src/main/res/xml/settings_main.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
     android:title="@string/settings_title">
+
+    <EditTextPreference
+        android:defaultValue="@string/settings_key_word_default"
+        android:inputType="text"
+        android:key="@string/settings_key_word_key"
+        android:selectAllOnFocus="true"
+        android:title="@string/settings_key_word_label" />
     <EditTextPreference
         android:defaultValue="@string/settings_page_size_default"
         android:inputType="numberDecimal"
